<resources>
    <string name="app_name">App #2 ISC-581</string>
    <string name="permission_title">Elija a que puede acceder esta APP</string>
    <string name="permission_storage">Almacenamiento</string>
    <string name="permission_location">Ubicación</string>
    <string name="permission_camera">Camara</string>
    <string name="permission_phone">Telefonia</string>
    <string name="permission_contacts">Contactos</string>
    <string name="permission_storage_desc">Accesa a tus archivos</string>
    <string name="permission_location_desc">Accesa a tu ubicacion</string>
    <string name="permission_camera_desc">Accesa a tu camara</string>
    <string name="permission_phone_desc">Accesa a tu telefono</string>
    <string name="permission_contacts_desc">Accesa a tus contactos</string>
</resources>