<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IntentActivity">

    <Button
            android:text="@string/permission_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cameraBtn"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/storageBtn"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="36dp"/>
    <Button
            android:text="@string/permission_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/contactsBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="132dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.501"/>
    <Button
            android:text="@string/permission_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/locationBtn"
            app:layout_constraintBottom_toTopOf="@+id/contactsBtn"
            android:layout_marginBottom="36dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/permission_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/phoneBtn"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/locationBtn" app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginBottom="36dp"/>
    <Button
            android:text="@string/permission_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/storageBtn"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/phoneBtn" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="36dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>